# abcc-example-starterkit

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  stdafx.cpp  stdafx.h  targetver.h
src/: main.c
src/abcc_adaptation/: abcc_driver_config.h  abcc_hardware_abstraction.c  abcc_software_port.c  abcc_software_port.h  abcc_types.h
src/abcc_adaptation/pctransportprovider/: TP.h  imp_tp.c  imp_tp.h
src/example_application/: abcc_network_data_parameters.c  abcc_network_data_parameters.h  cyclical_processing.c  implemented_callback_functions.c
